syntax="proto3";

package pb;

import "user.proto";

option go_package = "github.com/fsobh/auth/pb"; // go_package is used to specify the go package name for the generated code.


message UpdateUserRequest {
  string username = 1;
  optional string full_name = 2;
  optional string email = 3;
  optional string password = 4;
}

message UpdateUserResponse {
  User user = 1;
}